# gamepad-control

./: .gitignore  LICENSE  README.md  config.toml  gamepad-control.spec  pyproject.toml
scripts/: app_entry.py  build-app.sh  dump_axes.py  dump_buttons.py  dump_raw_buttons.py  install-launchagent.sh  restart.sh  uninstall-launchagent.sh
src/gamepad_control/: __init__.py  __main__.py  actions.py  config.py  controller.py  hid_backend.py  keys.py  launcher.py  log.py  media.py  modes.py  mouse.py  notify.py  overlay.py  tray.py
