[project]
name = "gamepad-control"
version = "0.1.0"
description = "Control macOS mouse/keyboard with a gamepad (Xbox layout)"
license = "MIT"
authors = [{ name = "Wadjakorn Tonsri" }]
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5",
    "pynput>=1.7",
    "rumps>=0.4",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-gamecontroller>=12.2",
    "hidapi>=0.15.0",
]

[project.scripts]
gamepad-control = "gamepad_control.__main__:main"

[dependency-groups]
dev = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamepad_control"]
